syntax = "proto3";

option go_package = "github.com/dopamine-joker/zu_logic/proto";
package proto;

service RpcLogicService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc TokenLogin(TokenLoginRequest) returns (TokenLoginResponse);
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Logout(LogoutRequest) returns (LogoutResponse);
  rpc CheckAuth(CheckAuthRequest) returns (CheckAuthResponse);
  rpc UploadPic(UploadRequest) returns (UploadResponse);
  rpc GetGoods(GetGoodsRequest) returns (GetGoodsResponse);
  rpc GetGoodsPic(GetGoodsPicRequest) returns (GetGoodsPicResponse);
}

message GetGoodsPicRequest {
  int32 gid = 1;
}

message GetGoodsPicResponse {
  int32 Code = 1;
  int32 gid = 2;
  int32 len = 3;
  repeated string path = 4;
}

message GetGoodsRequest {
  int32 page = 1;
  int32 count = 2;
}

message GetGoodsResponse {
  int32 Code = 1;
  repeated Goods GoodsList = 2;
}

message Goods {
  int32 id = 1;
  string Name = 2;  //商品名称
  string Uname = 3; //商家名称
  string Price = 4; //价格
  string Cover = 5; //封面url
}

message User {
  int32 Id = 1;
  string Email = 2;
  string Name = 3;
}

message UploadRequest {
  int32 Uid = 1;
  string Name = 2;
  string Price = 3;
  string detail = 4;
  PicStream cover = 5;
  repeated PicStream picList = 6;
}

message PicStream {
  string name = 1;    //图片名字
  bytes Content = 2;
}

//UploadPicResponse 上传文件响应
message UploadResponse {
  int32 Code = 1;
  int32 GoodId = 2;
}

//LoginRequest 登陆请求
message LoginRequest {
  string Email = 1;
  string Password = 2;
}

//LoginResponse 登陆响应
message LoginResponse {
  int32 Code = 1;
  string AuthToken = 2;
  User User = 3;
}

//LogoutRequest 登出请求
message LogoutRequest {
  string Token = 1;
}

//LogoutResponse 登出响应
message LogoutResponse {
  int32 Code = 1;
}

//TokenLoginRequest token登陆请求
message TokenLoginRequest {
  string Token = 1;
}

//TokenLoginResponse token登陆响应
message TokenLoginResponse {
  int32 Code = 1;
  string AuthToken = 2;
  User User = 3;
}

//RegisterRequest 注册请求
message RegisterRequest {
  string Email = 1;
  string Name = 2;
  string Password = 3;
}

//RegisterResponse 注册响应
message RegisterResponse {
  int32 Code = 1;
}

//CheckAuthRequest token认证请求
message CheckAuthRequest {
  string AuthToken = 1;
}

//CheckAuthResponse token认证响应
message CheckAuthResponse {
  int32 Code = 1;
  string AuthToken = 2;
  User User = 3;
}
